--- a/my_app/my_app/templates/enseignant_exercices.html
+++ b/my_app/my_app/templates/enseignant_exercices.html
@@ -255,16 +255,43 @@
 									<tbody>
 										{% for item in exercice_ress %}
 										<tr>
-											<td id="desig" >{{ item.desig_ex }}</td>
+											<td id="desig" class ="des">{{ item.desig_ex }}</td>
 											<td>{{ item.descr_ex }}</td>
 											<td>{{ item.but }}</td>
 											<td>
-												<button class="btn btn-info btn-xl" onclick="clickHandler"><i class="fa fa-plus"></i></button>											</td>
+												<button class="btn btn-info btn-xl" onclick="clickHandler()"><i class="fa fa-plus"></i></button>											</td>
 												<script>
 													function clickHandler(){
-														console.log("test");
-														var va = document.getElementById("desig");
-														console.log(va);
+														//get desig_ex of the selected exercice
+														var va = document.getElementById("desig").textContent;	
+														//this code get the first element of the table !!! I will fix that
+														
+														theUrl = "http://127.0.0.1:8000/api/exercices?desig_ex="+va; // url to retrieve the exercice from DB
+														var xmlHttp = new XMLHttpRequest();
+														xmlHttp.open( "GET", theUrl, false ); // false for synchronous request
+														xmlHttp.send( null );
+														va = xmlHttp.responseText;
+														var jsonData = JSON.parse(va);
+														jsonFile = jsonData[0].json_file;
+														console.log(jsonFile);
+														
+														//send json file to VEManager
+														var vemUrl = "";
+														var xhr = new XMLHttpRequest();
+														xhr.open("POST", '', true);
+
+														//Envoie les informations du header adaptées avec la requête
+														xhr.setRequestHeader("Content-Type", "application/json");
+
+														xhr.onreadystatechange = function() { //Appelle une fonction au changement d'état.
+																if (this.readyState === XMLHttpRequest.DONE && this.status === 200) {
+														// Requête finie, traitement ici.
+																}
+														}
+														xhr.send(jsonFile);
+														// xhr.send(new Int8Array());
+														// xhr.send(document);
+
 													}
 												</script>
 											</td>
