--- a/my_app/my_app/templates/enseignant_mail.html
+++ b/my_app/my_app/templates/enseignant_mail.html
@@ -31,6 +31,129 @@
 		<link href="css/style-responsive.css" rel="stylesheet">
 		<script src="lib/chart-master/Chart.js"></script>
 
+		<style>
+			body {font-family: Arial, Helvetica, sans-serif;}
+			
+			/* Full-width input fields */
+			input[type=text], input[type=password] {
+				width: 100%;
+				padding: 12px 20px;
+				margin: 8px 0;
+				display: inline-block;
+				border: 1px solid #ccc;
+				box-sizing: border-box;
+			}
+			
+			/* Set a style for all buttons */
+			button {
+				background-color: #4CAF50;
+				color: white;
+				padding: 14px 20px;
+				margin: 8px 0;
+				border: none;
+				cursor: pointer;
+				width: 100%;
+			}
+			
+			button:hover {
+				opacity: 0.8;
+			}
+			
+			/* Extra styles for the cancel button */
+			.cancelbtn {
+				width: auto;
+				padding: 10px 18px;
+				background-color: #f44336;
+			}
+			
+			/* Center the image and position the close button */
+			.imgcontainer {
+				text-align: center;
+				margin: 24px 0 12px 0;
+				position: relative;
+			}
+			
+			img.avatar {
+				width: 40%;
+				border-radius: 50%;
+			}
+			
+			.container {
+				padding: 16px;
+			}
+			
+			span.psw {
+				float: right;
+				padding-top: 16px;
+			}
+			
+			/* The Modal (background) */
+			.modal {
+				display: none; /* Hidden by default */
+				position: fixed; /* Stay in place */
+				z-index: 1; /* Sit on top */
+				left: 0;
+				top: 0;
+				width: 100%; /* Full width */
+				height: 100%; /* Full height */
+				overflow: auto; /* Enable scroll if needed */
+				background-color: rgb(0,0,0); /* Fallback color */
+				background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+				padding-top: 60px;
+			}
+			
+			/* Modal Content/Box */
+			.modal-content {
+				background-color: #fefefe;
+				margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+				border: 1px solid #888;
+				width: 80%; /* Could be more or less, depending on screen size */
+			}
+			
+			/* The Close Button (x) */
+			.close {
+				position: absolute;
+				right: 25px;
+				top: 0;
+				color: #000;
+				font-size: 35px;
+				font-weight: bold;
+			}
+			
+			.close:hover,
+			.close:focus {
+				color: red;
+				cursor: pointer;
+			}
+			
+			/* Add Zoom Animation */
+			.animate {
+				-webkit-animation: animatezoom 0.6s;
+				animation: animatezoom 0.6s
+			}
+			
+			@-webkit-keyframes animatezoom {
+				from {-webkit-transform: scale(0)} 
+				to {-webkit-transform: scale(1)}
+			}
+				
+			@keyframes animatezoom {
+				from {transform: scale(0)} 
+				to {transform: scale(1)}
+			}
+			
+			/* Change styles for span and cancel button on extra small screens */
+			@media screen and (max-width: 300px) {
+				span.psw {
+					display: block;
+					float: none;
+				}
+				.cancelbtn {
+					width: 100%;
+				}
+			}
+			</style>
+
 	</head>
 
 	<body>
@@ -114,13 +237,13 @@
 					<div class="col-sm-3">
 						<section class="panel">
 							<div class="panel-body">
-							<a href="/enseignant/mail_compose" class="btn btn-compose">
-								<i class="fa fa-pencil"></i>  Composer un message
-							</a>
-							<ul class="nav nav-pills nav-stacked mail-nav">
-								<li class="active"><a href="/enseignant/mail"> <i class="fa fa-inbox"></i> Boîte de réception</a></li>
-								<li><a href="/enseignant/mail_sent"> <i class="fa fa-envelope-o"></i> Messages Envoyés</a></li>
-							</ul>
+								<button  onclick="document.getElementById('id01').style.display='block'" class="btn btn-compose">
+									<i class="fa fa-pencil"></i>  Composer un message
+								</button>
+								<ul class="nav nav-pills nav-stacked mail-nav">
+									<li class="active"><a href="/enseignant/mail"> <i class="fa fa-inbox"></i> Boîte de réception</a></li>
+									<li><a href="/enseignant/mail_sent"> <i class="fa fa-envelope-o"></i> Messages Envoyés</a></li>
+								</ul>
 							</div>
 						</section>
 					</div>
@@ -163,6 +286,47 @@
 		<!-- /MAIN CONTENT -->
 		<!--main content end-->
 	
+		<div id="id01" class="modal showback">
+	
+			<form method="POST"  class="post-form modal-content animate">  
+				{% csrf_token %}  
+				<div>
+					{{ form.eleve}}  
+				</div>
+		
+				<div>
+					{{ form.subject}} 
+				</div>
+		
+				<div>
+					{{ form.content}} 
+				</div>
+		
+				<div>
+					{{ form.type}}  
+				</div>
+		
+				<div >
+					{{ form.at_time}}  
+				</div>
+				<div>
+					{{ form.enseignant}} 
+				</div>
+				<button type="submit" class="btn btn-theme03">envoyer</button>  
+			</form>  
+		</div>
+		<script>
+			// Get the modal
+			var modal = document.getElementById('id01');
+			
+			// When the user clicks anywhere outside of the modal, close it
+			window.onclick = function(event) {
+				if (event.target == modal) {
+					modal.style.display = "none";
+				}
+			}
+			</script>
+
 		</section>
 		<!-- js placed at the end of the document so the pages load faster -->
 		<script src="lib/jquery/jquery.min.js"></script>
